--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>孔Caml</title>
   <script src="../build/Main.js"></script>
-  <link rel="stylesheet" href="../bower_components/taketori-js/taketori.css">
   <style>
 body {
   margin: 0;
@@ -48,7 +47,22 @@ body {
       <h1 class="mouhitu">孔Caml</h1>
       <h2 class="mouhitu">入力</h2>
       <textarea id="input" contenteditable="true" class="grow fit"
-      placeholder="please write here.">亜。</textarea>
+      placeholder="please write here."
+>定曰為print_string。
+定名為string_of_int。
+定加為(+)。
+定減為(-)。
+定等為(==)。
+定改為print_newline。
+定読為read_line。
+定見為read_int。
+
+曰「にーはお」。呼改。
+定再 階数 為
+  若 等数0
+    寧 0
+    無 加数 何 減数1、階 也。亜。
+    </textarea>
       <h2>OCamlコード</h2>
       <div id="output" class="grow virt"></div>
       <h2>抽象構文木</h2>
