--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,10 @@ body {
   margin: 0;
   padding: 0;
 }
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
 .vert {
   writing-mode: tb-rl;
   writing-mode : vertical-rl;
@@ -44,7 +48,7 @@ body {
 <body>
   <div class="container">
     <div class="split grow">
-      <h1 class="mouhitu">孔Caml</h1>
+      <a href=".."><h1 class="mouhitu">孔Caml</h1></a>
       <h2 class="mouhitu">入力</h2>
       <textarea id="input" contenteditable="true" class="grow fit"
       placeholder="please write here."
